--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{{define "_menu"}}
+
+<nav class="navbar navbar-light bg-light mb-4">
+  <a class="navbar-brand" href="/">Loja</a>
+</nav>
+{{end}}
