--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,10 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
+{{define "Edit"}}
+{{template "_head"}}
+{{template "_menu"}}
 <body>
-$END$
+<div class="container">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-5">Edição de produto</h1>
+      <p class="lead">Insira os detalhes para atualizar ou editar</p>
+    </div>
+  </div>
+  <form method="POST" action="insert">
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="form-group">
+          <label for="nome">Nome:</label>
+          <input type="text" name="nome"class="form-control" value="{{.Nome}}">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="form-group">
+          <label for="descricao">Descrição:</label>
+          <input type="text" name="descricao" class="form-control" value="{{.Descricao}}">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-2">
+        <div class="form-group">
+          <label for="preco">Preço:</label>
+          <input type="number" name="preco" class="form-control" step="0.01" value="{{.Preco}}">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-2">
+        <div class="form-group">
+          <label for="quantidade">Quantidade:</label>
+          <input type="number" name="quantidade" class="form-control" value="{{.Quantidade}}">
+        </div>
+      </div>
+    </div>
+    <button type="submit" value="salvar" class="btn btn-success">Salvar</button>
+    <a class="btn btn-info" href="/">Voltar</a>
+  </form>
+</div>
 </body>
 </html>
+{{end}}
